fix: 이벤트 박스가 해당 날짜 칸 넘어가면 없어지는 이슈 수정 - 날짜 칸에 overflow: hidden이 적용되어 있었음

--- a/src/App.css
+++ b/src/App.css
@@ -263,10 +263,6 @@ input[type='checkbox'] + label > span {
   height: 82vh;
 }
 
-.fc-daygrid-day-frame {
-  overflow: hidden;
-}
-
 /* .fc-event-title.fc-sticky{
   white-space: normal;
 } */
